inc/engine.h

typedef uint32_t index_t;
///////////////

////Sensors////
typedef enum
{
	rayX = 0b001,
	rayY = 0b010,
	rayZ = 0b011,
	rayXn = 0b101,
	rayYn = 0b110,
	rayZn = 0b111
} sRayDir;
typedef struct
{
	void* object;
	dReal position[3];
	dReal normal[3];
} sPhysicsContact;
typedef struct
{
	dSpaceID space;
	sPhysicsContact *contacts;
	index_t contactsCount;
	index_t contactsAllocated;
} sPhysicsCS;
typedef struct
{
	dSpaceID space;
	sPhysicsContact *contacts;
	index_t contactsCount;
	index_t contactsAllocated;
	dReal angle;
	dReal range;
	sRayDir dir;
	dGeomID radar_mesh;
} sPhysicsRS;
//shader.c
typedef struct
{
	char name[256];
	GLchar* fragment_source;
	GLchar* vertex_source;
	GLsizei log_len;
	GLsizei frag_source_len;
	GLsizei vert_source_len;
	GLint success;
	GLuint compute;
	GLuint fragment;
	GLuint vertex;
	GLuint program;
	GLuint log;
	FILE* fp;
} sShader;
void sShaderSetVersion(char* version);
//mesh.c
typedef struct
{
	float r,g,b,a;
} sColour;
typedef struct
{
	uint32_t hash;
	char name[256];
	uint16_t width;
	uint16_t height;
	void* data;
	uint32_t type;
	GLuint ID;
} sTexture;
typedef struct
{
	uint32_t hash;
	char name[256];
	dReal friction;
	float transparency;
	_Bool glass;
	float height_scale;
	sColour diffuse;
	sColour specular;
	sTexture* diffuse_texture;
	sTexture* specular_texture;
	sTexture* height_texture;
	sTexture* lightmap_texture;
	sTexture* reflection_cubemap;
	float tdx;
	float tdy;
	float glow;
	float wet;
	GLuint shader;
} sMaterial;
typedef struct
{
	float vx,vy,vz;
	float nx,ny,nz;
	float u,v;
	float bx,by,bz;
	float tx,ty,tz;
} sVertex;
typedef struct
{
	uint32_t hash;
	char name[256];
	laType* link_matrix;
	sVertex* vertices;
	index_t* indices;
	uint32_t ind_count;
	uint32_t vert_count;
	sMaterial* material;
	GLuint VBO;
	GLuint IBO;
	GLuint uniforms[4];
	laType transform;
	laType bounding_box;
	uint16_t bones_indices[128];
	_Bool deformed;
	_Bool uv2;
	void* owner;
} sMesh;
typedef struct
{
	char name[256];
	index_t channels_count;
	float time;
	float time_begin;
	float time_end;
	float time_increment;
	ACTION_TYPE type;
	ACTION_TYPE blend_type;
	sActionChannel* channels;
	int* bones_matching;
} sAction;
typedef struct
{
	OBJECT_TEMPLATE;
	index_t bone_count;
	sAction action[MAX_ACTION_LAYERS];
	float action_weights[MAX_ACTION_LAYERS];
	laType* pose;
	sBone* bones;
} sSkeleton;
///////////////////////

typedef struct
{
	OBJECT_TEMPLATE;
	sSkeleton* skeleton;
	sMesh* mesh;
	dBodyID body;
	dBodyID bodyIgnoring;
	dGeomID geom;
	sPhysicsRS radar;\
	sPhysicsRS ray;\
	sPhysicsCS collider;
	int ghost;
	int physics_enabled;
	//dGeomID rays[6];
	uint32_t physicsType;
	uint32_t physicsShape;
	uint32_t collisionGroups;
	uint32_t collideWithGroups;
	dReal physicsFriction;
	dReal physicsMass;
	dReal averangeVel;
} sObject;
typedef struct
{
	OBJECT_TEMPLATE;
	CAMERA_TEMPLATE;
} sCamera;
typedef struct
{
	OBJECT_TEMPLATE;
	CAMERA_TEMPLATE;
	uint8_t type;
	sColour color;
	float inner,outer;
	bool shadow;
} sLight;
typedef union
{
	sObject object;
	sLight light;
	sCamera camera;
	sSkeleton skeleton;
	sBone bone;
} GameObject;
//scene.c
typedef struct
{
	void (*behaviour)(void*);
	sCamera camera;

	sMesh* meshes;
	sMaterial* materials;
	sTexture* textures;
	sTexture* cubemap;
	sLight** lights;
	sObject** objects;
	sSkeleton** skeletons;
	sLight* lights_inactive;
	sObject* objects_inactive;
	sSkeleton* skelets_inactive;
	sAction* actions;

	GameObject** gobjects;
	index_t gobjects_count;
	index_t gobjects_unique_counter;

	sShader *shader_list[8];

	index_t mesh_count;
	index_t material_count;
	index_t texture_count;
	index_t lights_count;
	index_t objects_count;
	index_t skeletons_count;
	uint32_t lights_inactive_count;
	index_t objects_inactive_count;
	index_t skelets_inactive_count;
	index_t actions_count;
	dWorldID world;
	dSpaceID space;
	dJointGroupID contactgroup;
	dJointGroupID joints;
} sScene;
// Renderer //
void sRenderSwapPPShaders(void);
void sRenderSetReflections(int val);
int  sRenderGetReflections(void);
void sRenderSetSSGI(int val);
int  sRenderGetSSGI(void);
void sRenderSetMotionBlur(int val);
int  sRenderGetMotionBlur(void);
void sRenderSetHDR(int val);
int  sRenderGetHDR(void);
void sRenderSetBloom(int val);
int  sRenderGetBloom(void);
void sEngineStartLoop(void);
void sEngineStartOpenGL(void);