inc/2D_renderer/fForm.h

typedef struct
{
	int type;
	int ID;
	_Bool delete_me;
	_Bool lock_rotation;
	_Bool visible;
	_Bool limits;
	_Bool xray;
	_Bool ghost;
	float transform[9];
	float transform_global[9];
	void* parent;
	fElement** elements;
	int elements_count;
	void** children;
	int child_count;
	int width, height;
	float xscroll,yscroll;
	void(*on_left_click)(void*);
	void(*on_right_click)(void*);
	void(*on_scroll)(void*,int);
	void(*idle)(void*);
	void(*on_left_release)(void*);
	void(*on_right_release)(void*);
	void(*on_release)(void*);
	void(*on_pointing)(void*);
	int hovered;
	void* data;
} fForm;
void fFormsSetPostFunction(void(*callback)(void));