inc/game_structures.h

typedef struct
{
	sObject* head;
	sObject* spine1;
	sObject* spine2;
	sObject* spine3;
	sObject* lShoulder;
	sObject* lForearm;
	sObject* rShoulder;
	sObject* rForearm;
	sObject* lLeg;
	sObject* lKnee;
	sObject* rLeg;
	sObject* rKnee;
	sObject* lFoot;
	sObject* rFoot;
	dJointID joints[16];
	dJointGroupID jointGroup;
} sRagdoll;
void sPlayerInit(sScene *scene,sSkeleton *skeleton);
void sPlayerSetImpact(float x,float y,float z);
int sRagdollInit(sScene* scene,sRagdoll* ragdoll, _Bool autodetect,char* prefix);
void sPlayerMouseLookOn(sScene*);
void sPlayerMouseLookOff(sScene*);