siberian_ctypes.py


class sRagdoll(Structure):
    _fields_ = [
        ('__head', sObject_p),
        ('__spine1', sObject_p),
        ('__spine2', sObject_p),
        ('__spine3', sObject_p),
        ('__lShoulder', sObject_p),
        ('__lForearm', sObject_p),
        ('__rShoulder', sObject_p),
        ('__rForearm', sObject_p),
        ('__lLeg', sObject_p),
        ('__lKnee', sObject_p),
        ('__rLeg', sObject_p),
        ('__rKnee', sObject_p),
        ('__lFoot', sObject_p),
        ('__rFoot', sObject_p),
        ('joints', sPhysicsJoint*16),
        ('__group', dJointGroupID)]

    def __init__(self, scene=None):
        Structure.__init__(self)
        self.__scene = scene

    @property
    def spine1_spine2_joint(self):
        return self.joints[0]

    @property
    def spine2_spine3_joint(self):
        return self.joints[1]

    @property
    def lforearm_lshoulder_joint(self):
        return self.joints[2]

    @property
    def rforearm_rshoulder_joint(self):
        return self.joints[3]

    @property
    def spine1_lshoulder_joint(self):
        return self.joints[4]

    @property
    def spine1_rshoulder_joint(self):
        return self.joints[5]

    @property
    def spine1_head_joint(self):
        return self.joints[6]

    @property
    def lknee_lleg_joint(self):
        return self.joints[7]

    @property
    def rknee_rleg_joint(self):
        return self.joints[8]

    @property
    def spine3_lleg_joint(self):
        return self.joints[9]

    @property
    def spine3_rleg_joint(self):
        return self.joints[10]

    @property
    def lfoot_lknee_joint(self):
        return self.joints[11]

    @property
    def rfoot_rknee_joint(self):
        return self.joints[12]

    @property
    def head(self):
        return getattr(self, '__head').contents if getattr(self, '__head') else None

    @head.setter
    def head(self, value):
        return setattr(self, '__head', pointer(value))

    @property
    def spine1(self):
        return getattr(self, '__spine1').contents if getattr(self, '__spine1') else None

    @spine1.setter
    def spine1(self, value):
        return setattr(self, '__spine1', pointer(value))

    @property
    def spine2(self):
        return getattr(self, '__spine2').contents if getattr(self, '__spine2') else None

    @spine2.setter
    def spine2(self, value):
        return setattr(self, '__spine2', pointer(value))

    @property
    def spine3(self):
        return getattr(self, '__spine3').contents if getattr(self, '__spine3') else None

    @spine3.setter
    def spine3(self, value):
        return setattr(self, '__spine3', pointer(value))

    @property
    def lShoulder(self):
        return getattr(self, '__lShoulder').contents if getattr(self, '__lShoulder') else None

    @lShoulder.setter
    def lShoulder(self, value):
        return setattr(self, '__lShoulder', pointer(value))

    @property
    def rShoulder(self):
        return getattr(self, '__rShoulder').contents if getattr(self, '__rShoulder') else None

    @rShoulder.setter
    def rShoulder(self, value):
        return setattr(self, '__rShoulder', pointer(value))

    @property
    def lForearm(self):
        return getattr(self, '__lForearm').contents if getattr(self, '__lForearm') else None

    @lForearm.setter
    def lForearm(self, value):
        return setattr(self, '__lForearm', pointer(value))

    @property
    def rForearm(self):
        return getattr(self, '__rForearm').contents if getattr(self, '__rForearm') else None

    @rForearm.setter
    def rForearm(self, value):
        return setattr(self, '__rForearm', pointer(value))

    @property
    def lLeg(self):
        return getattr(self, '__lLeg').contents if getattr(self, '__lLeg') else None

    @lLeg.setter
    def lLeg(self, value):
        return setattr(self, '__lLeg', pointer(value))

    @property
    def rLeg(self):
        return getattr(self, '__rLeg').contents if getattr(self, '__rLeg') else None

    @rLeg.setter
    def rLeg(self, value):
        return setattr(self, '__rLeg', pointer(value))

    @property
    def lKnee(self):
        return getattr(self, '__lKnee').contents if getattr(self, '__lKnee') else None

    @lKnee.setter
    def lKnee(self, value):
        return setattr(self, '__lKnee', pointer(value))

    @property
    def rKnee(self):
        return getattr(self, '__rKnee').contents if getattr(self, '__rKnee') else None

    @rKnee.setter
    def rKnee(self, value):
        return setattr(self, '__rKnee', pointer(value))

    @property
    def lFoot(self):
        return getattr(self, '__lFoot').contents if getattr(self, '__lFoot') else None

    @lFoot.setter
    def lFoot(self, value):
        return setattr(self, '__lFoot', pointer(value))

    @property
    def rFoot(self):
        return getattr(self, '__rFoot').contents if getattr(self, '__rFoot') else None

    @rFoot.setter
    def rFoot(self, value):
        return setattr(self, '__rFoot', pointer(value))

    def joinBodyParts(self, autodetect=0, prefix=""):
        if isinstance(prefix, str):
            prefix = prefix.encode()
        if (_siberian.sRagdollInit(self.__scene, self, autodetect, prefix)):
            raise Exception('sRagdoll: one of the spine parts is not set')


_siberian.sRagdollInit.argtypes = (
    POINTER(sScene), POINTER(sRagdoll), c_bool, c_char_p)
_siberian.sRagdollInit.restype = c_int

sPlayerInit = _siberian.sPlayerInit
sPlayerInit.argtypes = (POINTER(sScene), sObject_p)
sPlayerSetImpact = _siberian.sPlayerSetImpact
sPlayerSetImpact.argtypes = (c_float, c_float, c_float)

sPlayerMouseLookOn = _siberian.sPlayerMouseLookOn
sPlayerMouseLookOn.argtypes = (POINTER(sScene),)
sPlayerMouseLookOn.restype = None

sPlayerMouseLookOff = _siberian.sPlayerMouseLookOff
sPlayerMouseLookOff.argtypes = (POINTER(sScene),)
sPlayerMouseLookOff.restype = None

def sEngineStartOpenGL():
    _siberian.sEngineStartOpenGL()
    _siberian.fFormsSetPostFunction(__fFormGC)
    fForm.setPostFunctionInterval(60)

sEngineStartLoop = _siberian.sEngineStartLoop

#sStreamMJPEGOpen = _siberian.open_videostream
#sStreamMJPEGWrite = _siberian.stream_write_frame
#sStreamMJPEGClose = _siberian.close_videostream


def sPlayerSpeed(): return cast(
    _siberian.walk_speed_vector, POINTER(laType)).contents


def sPlayerStep(): return cast(_siberian.walk_step, POINTER(c_bool)).contents


class __sRender:
    def toggle(self, param):
        if param == 'Bloom':
            sRender.Bloom = 1 - sRender.Bloom

        if param == 'HDR':
            sRender.HDR = 1 - sRender.HDR

        if param == 'Reflections':
            sRender.Reflections = 1 - sRender.Reflections

        if param == 'SSGI':
            sRender.SSGI = 1 - sRender.SSGI

        if param == 'MotionBlur':
            sRender.MotionBlur = 1 - sRender.MotionBlur

    def setGLSLversion(self, version):
        if not isinstance(version, bytes):
            version = str(version).encode()
        if len(version) < 16:
            _siberian.sShaderSetVersion(version)

    @property
    def Bloom(self):
        return _siberian.sRenderGetBloom()

    @Bloom.setter
    def Bloom(self, value):
        _siberian.sRenderSetBloom(value)

    @property
    def HDR(self):
        return _siberian.sRenderGetHDR()

    @HDR.setter
    def HDR(self, value):
        _siberian.sRenderSetHDR(value)

    @property
    def Reflections(self):
        return _siberian.sRenderGetReflections()

    @Reflections.setter
    def Reflections(self, value):
        _siberian.sRenderSetReflections(value)

    @property
    def SSGI(self):
        return _siberian.sRenderGetSSGI()

    @SSGI.setter
    def SSGI(self, value):
        _siberian.sRenderSetSSGI(value)

    @property
    def MotionBlur(self):
        return _siberian.sRenderGetMotionBlur()

    @MotionBlur.setter
    def MotionBlur(self, value):
        _siberian.sRenderSetMotionBlur(value)

    def SwapPPShaders(self):
        _siberian.sRenderSwapPPShaders()


sRender = __sRender()

_siberian.sShaderSetVersion.argtypes = (c_void_p,)
_siberian.sShaderSetVersion.restype = None

_siberian.sRenderGetBloom.argtypes = ()
_siberian.sRenderGetBloom.restype = c_int

_siberian.sRenderSetBloom.argtypes = (c_int,)
_siberian.sRenderSetBloom.restype = None

_siberian.sRenderGetReflections.argtypes = ()
_siberian.sRenderGetReflections.restype = c_int

_siberian.sRenderSetReflections.argtypes = (c_int,)
_siberian.sRenderSetReflections.restype = None

_siberian.sRenderGetSSGI.argtypes = ()
_siberian.sRenderGetSSGI.restype = c_int

_siberian.sRenderSetSSGI.argtypes = (c_int,)
_siberian.sRenderSetSSGI.restype = None

_siberian.sRenderGetMotionBlur.argtypes = ()
_siberian.sRenderGetMotionBlur.restype = c_int

_siberian.sRenderSetMotionBlur.argtypes = (c_int,)
_siberian.sRenderSetMotionBlur.restype = None

_siberian.sRenderGetHDR.argtypes = ()
_siberian.sRenderGetHDR.restype = c_int

_siberian.sRenderSetHDR.argtypes = (c_int,)
_siberian.sRenderSetHDR.restype = None

_siberian.sRenderSwapPPShaders.argtypes = ()
_siberian.sRenderSwapPPShaders.restype = None

# sRenderDeferred(1)

if __name__ == '__main__':
    print((sObject, sizeof(sObject)))
    print((sCamera, sizeof(sCamera)))
    print((sShader, sizeof(sShader)))
    print((sTexture, sizeof(sTexture)))
    print((sMaterial, sizeof(sMaterial)))
    print((sMesh, sizeof(sMesh)))
    print((sPhysicsContact, sizeof(sPhysicsContact)))
    print((sPhysicsCS, sizeof(sPhysicsCS)))
    print((sPhysicsRS, sizeof(sPhysicsRS)))
    print((sScene, sizeof(sScene)))
    print((fElement, sizeof(fElement)))
    print((fForm, sizeof(fForm)))
